# cicd-pipeline-demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  codeql.yml  release.yml  terraform.yml
alembic/: env.py
alembic/versions/: 001_create_items_table.py
docker/: Dockerfile  Dockerfile.dev
docs/: MINIKUBE.md  SECRETS.md
helm/cicd-demo/: Chart.yaml  values-minikube.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/cicd-demo/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
monitoring/grafana/dashboards/: fastapi.json
monitoring/prometheus/: prometheus.yml
scripts/: capture_screenshots.py  deploy.sh  health-check.sh  minikube-setup.sh  minikube-teardown.sh
src/app/: __init__.py  main.py
src/app/api/: health.py  routes.py
src/app/core/: config.py
src/app/db/: __init__.py  database.py  models.py
src/app/models/: schemas.py
src/app/services/: calculator.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: __init__.py  conftest.py  test_calculator.py  test_health.py  test_routes.py
tests/load/: README.md  smoke.js  stress.js
